fixing overflow

--- a/styles/sass/_GeneralStyles.scss
+++ b/styles/sass/_GeneralStyles.scss
@@ -1,6 +1,6 @@
 html {
 	scroll-behavior: smooth;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 body {
 	font-size: 125%;
